--- a/analogous.html
+++ b/analogous.html
@@ -24,17 +24,20 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #63B8E8;
+            background-color: #4e6f97;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 3.998rem;
             padding:1rem 2rem;
+            color:#fff;
+            text-shadow: 4px 4px 5px #3a5372;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
+            color:#46385d;
         }
         nav ul{
             padding:1rem 0;
@@ -46,17 +49,18 @@
         nav li>a{
             display: block;
             text-decoration: none;
-            border-bottom: 0.2rem solid black;
+            border-bottom: 0.2rem solid lightgrey;
             padding: 0.2rem 2rem;
-            color: #999;
+            color: #97b5ce;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #222;
+            color: #46385d;
         }
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
+            color:black;
         }
         main p:last-child{
             padding-bottom: 4rem;
@@ -65,11 +69,12 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: #fff;
         }
         header{
             width:100%;
-            border-bottom: 1rem solid black;
+            border-bottom: 1rem solid #97b5ce;
+            background-color:#4e6f97;
         }
         nav{
             float:left;
@@ -82,27 +87,26 @@
         footer{
             clear:both;
             width: 100%;
-            border-top: 0.5rem solid black;
+            border-top: 0.5rem solid #4e6f97;
+            background-color:#4e6f97;
         }
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #666;
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>A Colourful Site</h1>
+            <h1>Analogous Scheme - Keanu R.</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
+                <li><a href="/analogous.html">Analogous</a></li>
+                <li><a href="/complementary.html">Complementary</a></li>
+                <li><a href="/index.html">Monochromatic</a></li>
             </ul>
         </nav>
         <main>
