--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #d4d4d4;
+            background-color: #ff9c00;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 3.998rem;
             padding:1rem 2rem;
+            color:#fff;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
+            color:#ffc600;
         }
         nav ul{
             padding:1rem 0;
@@ -46,17 +48,18 @@
         nav li>a{
             display: block;
             text-decoration: none;
-            border-bottom: 0.2rem solid black;
+            border-bottom: 0.2rem solid #b06115;
             padding: 0.2rem 2rem;
-            color: #999;
+            color: #ffc600;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #222;
+            color: #fff;
         }
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
+            color:#fff;
         }
         main p:last-child{
             padding-bottom: 4rem;
@@ -65,11 +68,12 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: #d67619;
         }
         header{
             width:100%;
-            border-bottom: 1rem solid black;
+            border-bottom: 1rem solid #ff9c00;
+            background-color: #212121;
         }
         nav{
             float:left;
@@ -82,27 +86,25 @@
         footer{
             clear:both;
             width: 100%;
-            border-top: 0.5rem solid black;
+            background-color:#ff9c00;
         }
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #666;
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>A Colourful Site</h1>
+            <h1>Monochromatic Scheme - Keanu R. </h1>
         </header>
         <nav>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
+                <li><a href="/analogous.html">Analogous</a></li>
+                <li><a href="/complementary.html">Complementary</a></li>
+                <li><a href="#">Monochromatic</a></li>
             </ul>
         </nav>
         <main>
