Sidebar link changes

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </header>
         <nav>
             <ul>
-                <li><a href="/analogous.html">Analogous</a></li>
-                <li><a href="/complementary.html">Complementary</a></li>
+                <li><a href="../colours/analogous.html">Analogous</a></li>
+                <li><a href="../colours/complementary.html">Complementary</a></li>
                 <li><a href="#">Monochromatic</a></li>
             </ul>
         </nav>
