--- a/complementary.html
+++ b/complementary.html
@@ -102,9 +102,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="/analogous.html">Analogous</a></li>
-                <li><a href="/complementary.html">Complementary</a></li>
-                <li><a href="/index.html">Monochromatic</a></li>
+                <li><a href="../colours/analogous.html">Analogous</a></li>
+                <li><a href="../colours/complementary.html">Complementary</a></li>
+                <li><a href="../colours/index.html">Monochromatic</a></li>
             </ul>
         </nav>
         <main>
