--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <ul>
                 <li><a href="../colours/analogous.html">Analogous</a></li>
                 <li><a href="../colours/complementary.html">Complementary</a></li>
-                <li><a href="#">Monochromatic</a></li>
+                <li><a href="../colours/index.html">Monochromatic</a></li>
             </ul>
         </nav>
         <main>
