--- a/analogous.html
+++ b/analogous.html
@@ -37,7 +37,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
-            color:#46385d;
+            color:#513d70;
         }
         nav ul{
             padding:1rem 0;
@@ -55,7 +55,7 @@
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #46385d;
+            color: #513d70;
         }
         p{
             font-size: 1.414rem;
