--- a/analogous.html
+++ b/analogous.html
@@ -37,7 +37,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
-            color:#513d70;
+            color:#473473;
         }
         nav ul{
             padding:1rem 0;
@@ -51,11 +51,11 @@
             text-decoration: none;
             border-bottom: 0.2rem solid lightgrey;
             padding: 0.2rem 2rem;
-            color: #97b5ce;
+            color: #82b4cc;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #513d70;
+            color: #473473;
         }
         p{
             font-size: 1.414rem;
@@ -73,7 +73,7 @@
         }
         header{
             width:100%;
-            border-bottom: 1rem solid #97b5ce;
+            border-bottom: 1rem solid #82b4cc;
             background-color:#4e6f97;
         }
         nav{
